add_executable(protobuf_server protobuf_server.cpp test.pb.cc)
add_executable(protobuf_client protobuf_client.cpp test.pb.cc)
IF(UNIX)
target_link_libraries(protobuf_server netcore pthread)
target_link_libraries(protobuf_client netcore pthread)
ELSE()
target_link_libraries(protobuf_server netcore)
target_link_libraries(protobuf_client netcore)
ENDIF()