add_executable(prototrpc_server protorpc_server.cpp rpcservice.pb.cc)
add_executable(protorpc_client protorpc_client.cpp rpcservice.pb.cc)
IF(UNIX)
target_link_libraries(prototrpc_server netcore pthread)
target_link_libraries(protorpc_client netcore pthread)
ELSE()
target_link_libraries(prototrpc_server netcore)
target_link_libraries(protorpc_client netcore)
ENDIF()