add_executable(protorpc_server protorpc_server.cpp rpcservice.pb.cc)
add_executable(protorpc_client protorpc_client.cpp rpcservice.pb.cc)
IF(UNIX AND NOT APPLE)
target_link_libraries(protorpc_server netcore pthread)
target_link_libraries(protorpc_client netcore pthread)
ELSE()
target_link_libraries(protorpc_server netcore)
target_link_libraries(protorpc_client netcore)
ENDIF()